--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Polski</title>
+    <title>Monopoly</title>
     <link rel="stylesheet" href="css/Main.css">
   </head>
   <body>
@@ -15,6 +15,7 @@
       <div id="main">Основная часть</div>
       <div id="aside">Боковая часть</div>
       <div id="footer">Футер</div>
+      sjksdjfklsdjflksdjfklsdjfklsdjflksjdflksjdlkfjsdlkfjslkdfjslkdfsdf
     </a>
   </body>
 </html>
