BackGroud image + logo + welcome + effects

--- a/British.html
+++ b/British.html
@@ -3,9 +3,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Learn British English</title>
   </head>
   <body>
-    <p>ХУЙ</p>
+
   </body>
 </html>
