--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -7,15 +6,38 @@
     <link rel="stylesheet" href="css/Main.css">
   </head>
   <body>
-      <div id="header">
-        <img src="Images/1920px-Flag_of_Poland_(normative).svg.png" class="flag" width="30%">
-        <img src="Images/Flag_of_the_United_Kingdom_(3-5).svg.png" class="flag" width="31.27%" >
-        <img src="Images/Flag_of_the_United_States.svg.png" class="flag"width="35.6%" >
+    <div id="header">
+      <div class="bg_container">
+        <div class="content">
+          <div id="welcome">
+            <img src="Images/BigP.png" id="logo">
+            <h1 class="welcome_text">Big Polyglot presents</h1>
+            <h2 class="welcome_text">The greatest of all time school of learning languages</h2>
+          </div>
+
+          <div class="flag-container">
+            <a href="Polski.html">
+              <img src="Images/1920px-Flag_of_Poland_(normative).svg.png" class="flag">
+            </a>
+            <a href="British.html">
+              <img src="Images/Flag_of_the_United_Kingdom_(3-5).svg.png" class="flag">
+            </a>
+            <a href="American.html">
+              <img src="Images/Flag_of_the_United_States.svg.png" class="flag">
+            </a>
+          </div>
+
+          <ul>
+            <li>Home</li>
+            <li>Courses</li>
+            <li>Grammar</li>
+            <li>Kontakts</li>
+            <li>Teacher's cettifikate</li>
+          </ul>
+        </div>
       </div>
-      <div id="main">Основная часть</div>
-      <div id="aside">Боковая часть</div>
-      <div id="footer">Футер</div>
-      sjksdjfklsdjflksdjfklsdjfklsdjflksjdflksjdlkfjsdlkfjslkdfjslkdfsdf
-    </a>
+    </div>
+    <div id="aside">Боковая часть</div>
+    <div id="footer">Футер</div>
   </body>
 </html>
