Header книга с кофем

--- a/index.html
+++ b/index.html
@@ -3,41 +3,70 @@
   <head>
     <meta charset="utf-8">
     <title>Monopoly</title>
-    <link rel="stylesheet" href="css/Main.css">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
+
+
+
     <div id="header">
       <div class="bg_container">
         <div class="content">
-          <div id="welcome">
-            <img src="Images/BigP.png" id="logo">
-            <h1 class="welcome_text">Big Polyglot presents</h1>
-            <h2 class="welcome_text">The greatest of all time school of learning languages</h2>
-          </div>
+          <img src="Images/BigP.png" id="logo">
 
-          <div class="flag-container">
-            <a href="Polski.html">
-              <img src="Images/1920px-Flag_of_Poland_(normative).svg.png" class="flag">
-            </a>
-            <a href="British.html">
-              <img src="Images/Flag_of_the_United_Kingdom_(3-5).svg.png" class="flag">
-            </a>
-            <a href="American.html">
-              <img src="Images/Flag_of_the_United_States.svg.png" class="flag">
-            </a>
+          
+          <div id="presents_container">
+            <p class="presents" id="Big">Big Polyglot</p>
+            <p class="presents" id="Polyglot"></p>
+            <p class="presents" id="Presents">Presents</p>
           </div>
+          <div class="coffee">
+            <p>The gretetest</p>
+            <p> of all time school of learning language</p>
+          </div>
+          <div class="coffee_1">
+            <p>Learn English online and improve your skills through</p>
+            <p>our high-quality</p>
+            <p id="third">courses and resources.</p>
 
-          <ul>
-            <li>Home</li>
-            <li>Courses</li>
-            <li>Grammar</li>
-            <li>Kontakts</li>
-            <li>Teacher's cettifikate</li>
-          </ul>
+          </div>
+          
         </div>
       </div>
     </div>
-    <div id="aside">Боковая часть</div>
-    <div id="footer">Футер</div>
+    <nav>
+      <ul>
+        <li><a href="">Главная</a></li>
+        <li><a href="">О нас</a></li>
+        <li><a href="">Граматика</a></li>
+        <li><a href="">Сертификат учителя</a></li>
+        <li><a href="">Контакты</a></li>
+      </ul>
+    </nav>
+
+
+
+    <div id="main">
+      <div id="Polish">
+        <img src="Images/1920px-Flag_of_Poland_(normative).svg.png" alt="Polish flag" class="flag">
+        <div class="information">
+          <p>Если вы собрались ехать в Польшу или просто решили изучить это прекрасный, легкий Польский язык, то этот курс специально для вас. Тут вы познакомитесь с польским языком, культурой, традициями, погрузитесь в мир истории этой страны </p>
+        </div>
+      </div>
+      <div id="British">
+        <img src="Images/Flag_of_the_United_Kingdom_(3-5).svg.png" alt="British flag" class="flag_right">
+        <div class="information">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum alias voluptatum, totam porro tempora, suscipit unde minima distinctio, iusto vero amet quia nesciunt tempore libero. Optio impedit doloribus assumenda libero?</p>
+        </div>
+      </div>
+      <div id="USA">
+        <img src="Images/Flag_of_the_United_States.svg.png" alt="USA flag" class="flag">
+        <div class="information">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates suscipit, error at asperiores dignissimos amet dolores iure repellat ipsa, autem voluptatem incidunt voluptatibus doloremque dolor maiores eligendi ullam necessitatibus cupiditate!</p>
+        </div>
+      </div>
+
+    </div>
   </body>
 </html>
