The first footer

--- a/index.html
+++ b/index.html
@@ -97,17 +97,20 @@
     <div id="footer">
       <div id="contacts">
         <h2>Contacts:</h2>
-        <div>
-          <img src="Images/Contacts_logo.png" alt="" class="logo_footer">
-          <p>0667072462</p>
-        </div>
-        <div>
-          <img src="Images/email.png" alt="" class="logo_footer">
-          <p>andrey.knapp@gmail.com</p>
-        </div>
+        <ul class="footer_ul" type="none">
+          <li>
+            <img src="Images/Contacts_logo.png" alt="" class="logo_footer">
+            <p>0667072462</p>
+          </li>
+          <li>
+            <img src="Images/email.png" alt="" class="logo_footer">
+            <p>andrey.knapp@gmail.com</p>
+          </li>
+        </ul>
       </div>
       <div id="follow_us">
-        <ul>
+        <h2>Follow us:</h2>
+        <ul class="footer_ul" type="none">
           <li>
             <img src="Images/TikTok.png" alt="" class="logo_footer">
             <p>TikTok</p>
@@ -129,10 +132,20 @@
       </div>
       <div id="Tests">
         <h2>Tests:</h2>
-        <p>Find out your level of English</p>
-        <p>Find out your level of Polish</p>
-        <p>Vocabulary</p>
-        <p>Grammar</p>
+        <ul class="footer_ul" type="none">
+          <li>
+            Find out your level of English
+          </li>
+          <li>
+            Find out your level of Polish
+          </li>
+          <li>
+            Vocabulary
+          </li>
+          <li>
+            Grammar
+          </li>
+        </ul>
       </div>
     </div>
   </body>
