--- a/Register.html
+++ b/Register.html
@@ -11,23 +11,25 @@
     <div id="heading">
         <p>BigP | Register</p>
     </div>
+
     <div id="main">
+        <p class="p_main">Персональні данні</p>
         <div id="register_box">
             <div class="mini-box">
                 <form>
-                    <label for="name">Введите имя: </label><br>
-                    <label for="surname">Введите фамилию: </label><br>
-                    <label for="last_name">Введи очество: </label><br>
-                    <label for="age">Введите ваш возвраст: </label><br>
+                    <label for="name">Введіть ім'я: </label><br>
+                    <label for="surname">Введіть прізвище: </label><br>
+                    <label for="last_name">Введіть по-батькові: </label><br>
+                    <label for="age">Введіть ваш вік: </label><br>
                 </form>
             </div>
     
             <div class="mini-box" id="mini-box-2">
                 <form>
-                    <input class="input"  type="text" placeholder="Имя"> <br>
-                    <input class="input"  type="text" placeholder="фамилия"> <br>
-                    <input class="input"  type="text" placeholder="Очество"> <br>
-                    <input class="input"  type="text" placeholder="Возвраст"> <br>
+                    <input class="input"  type="text" placeholder="Ім'я"> <br>
+                    <input class="input"  type="text" placeholder="Прізвище"> <br>
+                    <input class="input"  type="text" placeholder="По-батькові"> <br>
+                    <input class="input"  type="text" placeholder="Вік"> <br>
                 </form>
             </div>
             <div id="JoeBiden">
