--- a/Register_1.html
+++ b/Register_1.html
@@ -12,20 +12,21 @@
         <p>BigP | Register</p>
     </div>
     <div id="main">
+        <p class="p_main">Створення аккаунту</p>
         <div id="register_box">
             <div class="mini-box">
                 <form>
-                    <label for="number">Введите ваш номер телефона</label><br>
+                    <label for="number">Введіть ваш номер телефону:</label><br>
                     <label for="email">Email: </label><br>
                     <label for="password">Придумайте пароль: </label><br>
-                    <label for="re_password">Введите еще раз пароль: </label><br>
+                    <label for="re_password">Введіть пароль ще раз: </label><br>
                     
                 </form>
             </div>
     
             <div class="mini-box" id="mini-box-2">
                 <form>
-                    <input class="input"  type="text" placeholder="Номер телефона"><br>
+                    <input class="input"  type="text" placeholder="Номер телефону"><br>
                     <input class="input"  type="email" placeholder="email"> <br>
                     <input class="input"  type="password"> <br>
                     <input class="input"  type="password"> <br>
