--- a/Register_2.html
+++ b/Register_2.html
@@ -3,23 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/Register.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/Register_2.css">
+    <title></title>
 </head>
 <body>
     <img src="Images/BigP.png" alt="" id="logo">
     <div id="heading">
         <p>BigP | Register</p>
     </div>
-    <div id="polite">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit placeat saepe similique necessitatibus aliquam reprehenderit a ea beatae, asperiores soluta doloremque aliquid eos distinctio quibusdam minus minima ad maxime harum.Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit placeat saepe similique necessitatibus aliquam reprehenderit a ea beatae, asperiores soluta doloremque aliquid eos distinctio quibusdam minus minima ad maxime harum.Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit placeat saepe similique necessitatibus aliquam reprehenderit a ea beatae, asperiores soluta doloremque aliquid eos distinctio quibusdam minus minima ad maxime harum.Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit placeat saepe similique necessitatibus aliquam reprehenderit a ea beatae, asperiores soluta doloremque aliquid eos distinctio quibusdam minus minima ad maxime harum.Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit placeat saepe similique necessitatibus aliquam reprehenderit a ea beatae, asperiores soluta doloremque aliquid eos distinctio quibusdam minus minima ad maxime harum.Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit placeat saepe similique necessitatibus aliquam reprehenderit a ea beatae, asperiores soluta doloremque aliquid eos distinctio quibusdam minus minima ad maxime harum.Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit placeat saepe similique necessitatibus aliquam reprehenderit a ea beatae, asperiores soluta doloremque aliquid eos distinctio quibusdam minus minima ad maxime harum.Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit placeat saepe similique necessitatibus aliquam reprehenderit a ea beatae, asperiores soluta doloremque aliquid eos distinctio quibusdam minus minima ad maxime harum.Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit placeat saepe similique necessitatibus aliquam reprehenderit a ea beatae, asperiores soluta doloremque aliquid eos distinctio quibusdam minus minima ad maxime harum.Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit placeat saepe similique necessitatibus aliquam reprehenderit a ea beatae, asperiores soluta doloremque aliquid eos distinctio quibusdam minus minima ad maxime harum.Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit placeat saepe similique necessitatibus aliquam reprehenderit a ea beatae, asperiores soluta doloremque aliquid eos distinctio quibusdam minus minima ad maxime harum.Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit placeat saepe similique necessitatibus aliquam reprehenderit a ea beatae, asperiores soluta doloremque aliquid eos distinctio quibusdam minus minima ad maxime harum.Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit placeat saepe similique necessitatibus aliquam reprehenderit a ea beatae, asperiores soluta doloremque aliquid eos distinctio quibusdam minus minima ad maxime harum.Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit placeat saepe similique necessitatibus aliquam reprehenderit a ea beatae, asperiores soluta doloremque aliquid eos distinctio quibusdam minus minima ad maxime harum.Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit placeat saepe similique necessitatibus aliquam reprehenderit a ea beatae, asperiores soluta doloremque aliquid eos distinctio quibusdam minus minima ad maxime harum.Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit placeat saepe similique necessitatibus aliquam reprehenderit a ea beatae, asperiores soluta doloremque aliquid eos distinctio quibusdam minus minima ad maxime harum.Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit placeat saepe similique necessitatibus aliquam reprehenderit a ea beatae, asperiores soluta doloremque aliquid eos distinctio quibusdam minus minima ad maxime harum.Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit placeat saepe similique necessitatibus aliquam reprehenderit a ea beatae, asperiores soluta doloremque aliquid eos distinctio quibusdam minus minima ad maxime harum.
-        <form>
-            <input type="checkbox">
-            <label for="polite_confidence">Я прочитал и ознакомился с политикой конфиденциальности</label> <br>
-            <input type="checkbox">
-            <label for="">Я даю согласие на использование и обработку моих данных</label>
-        </form>
+    <div id="main">
+        <p class="p_main">Майже у цілі</p>
+        <div id="register_box">
+            <div class="mini-box_1">
+                <form action="">
+                    <label for="">Мовна программа: </label><br>
+                    <label for="">Моя рідна мова: </label><br>
+                </form>
+            </div>
+            <div class="mini-box_1" id="min-box-2">
+                <select name="" id="">
+                    <option value="">Американський англійський</option>
+                    <option value="">Британський англійський</option>
+                    <option value="">Польський</option>
+                </select>
+                <br>
+                <select name="" id="">
+                    <option value="" selected>Українська</option>
+                    <option value="">Польська</option>
+                    <option value="">Англійська</option>
+                </select>
+            </div>
+            <form action="" id="polite">
+                <input type="checkbox">
+                <p>Натискаючи на цю кнопку ви погоджуєтесь з нашою <a href="">політикою конфіденційності</a></p><br>
+                <input type="checkbox">
+                <p>Натискаючи на цю кнопку ви даєте право на обробку <a href="">персональних данних</a></p>
+            </form>
+            <a href="BigPAccount.html" id="finish">
+                <p>Завершити реєстрацію</p>
+            </a>
+        </div>
     </div>
+    
 
 </body>
 </html>
