--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         <div class="content">
           <nav>
             <ul>
-              <li><a href="index.html">Главная</a></li>
+              <li><a href="index.html">Головна</a></li>
               <li><a href="About_us.html">О нас</a></li>
               <li><a href="Grammar.html">Граматика</a></li>
               <li><a href="teacher_certificate.html">Сертификат учителя</a></li>
-              <li><a href="Contacts.html">Контакты</a></li>
+              <li><a href="Contacts.html">Контакти</a></li>
             </ul>
           </nav>
           <div id="login_register">
@@ -76,15 +76,29 @@
 Индустриальная страна с развитой экономикой[14]. Объём ВВП по паритету покупательной способности (ППС) на душу населения — 43 480 долларов в год (2022).[7] В 2022 году ВВП Польши по ППС составил 1637 млрд долл.[7]. Денежная единица — польский злотый (усреднённый курс за 2016 год — 3,8 злотого за 1 доллар США).Перейти к разделу «#Экономика» 
           </p>
       </div>
+      <a href="Register.html">
+        <div id="to_registrate">
+          <p>Register</p>
+        </div>
+      </a>
     </div>
-    <div id="Britain" class="courses">
+
+    <div id="British" class="courses">
       <img src="Images/Flag_of_the_United_Kingdom_(3-5).svg.png" alt="" class="flag">
       <div class="courses_info">
         <p><i>B</i>еликобрита́ния (русское название происходит от англ. Great Britain), или Соединённое Короле́вство (United Kingdom, сокр. UK)[19], полная официальная форма — Соединённое Короле́вство Великобрита́нии и Се́верной Ирла́ндии[19][6] (англ. The United Kingdom of Great Britain and Northern Ireland[комм 1][20]) — суверенное государство у северо-западного побережья континентальной Европы[21][22], состоящее из Англии, Уэльса, Шотландии и Северной Ирландии[23]. Соединённое Королевство включает в себя остров Великобритания, северо-восточную часть острова Ирландия и множество более мелких Британских островов[24]. Северная Ирландия имеет сухопутную границу с Республикой Ирландия; в остальном, Великобритания окружена Атлантическим океаном, Северным морем, Ла-Маншем, Кельтским морем и Ирландским морем. Общая площадь Соединённого Королевства составляет 242 500 км², а численность населения в 2020 году оценивалась в более чем 67 млн человек[15].
 
           Великобритания является унитарной парламентской демократией и конституционной монархией[комм 2][25][26]. Король Карл III правит с 2022 года. Столицей и крупнейшим городом является Лондон, глобальный финансовый центр с населением (вместе с пригородами) более 14 миллионов человек. Другие крупные города — Бирмингем, Манчестер, Глазго, Ливерпуль и Лидс[27]. Шотландия, Уэльс и Северная Ирландия обладают собственными правительствами, каждое из которых наделено различными полномочиями[28][29].Перейти к разделу «#Органы власти в автономиях» </p>
       </div>
+
+      <a href="Register.html">
+        <div id="to_registrate">
+          <p>Register</p>
+        </div>
+      </a>
+
     </div>
+    
     <div id="USA" class="courses">
       <img src="Images/Flag_of_the_United_States.svg.png" alt="" class="flag">
       <div class="courses_info">
@@ -92,7 +106,15 @@
 
           Столица — город Вашингтон (округ Колумбия). Самые крупные по численности населения мегаполисы — Нью-Йорк, Лос-Анджелес и Чикаго — являются важнейшими глобальными городами. Соединённые Штаты граничат на севере с Канадой, на юге — с Мексикой, также имеют морскую границу с Россией на западе и с Кубой на юге. Омываются Тихим океаном с запада, Атлантическим океаном — с востока и Северным Ледовитым океаном — с севера. Соединённые Штаты Америки были образованы в 1776 году при объединении тринадцати британских колоний, объявивших о своей независимости. Война за независимость США продолжалась до 1783 года и окончилась победой колонистов. В 1787 году была принята Конституция США, а в 1791 — Билль о правах, который существенно ограничил полномочия правительства в отношении граждан. В 1861 году противоречия между рабовладельческими южными и промышленными северными штатами привели к началу четырёхлетней Гражданской войны. Следствием победы северных штатов стал повсеместный запрет рабства, а также объединение страны после раскола, возникшего при объединении южных штатов в Конфедерацию и объявлении её независимости от Вашингтона. </p>
       </div>
+
+      <a href="Register.html">
+        <div id="to_registrate">
+          <p>Register</p>
+        </div>
+      </a>
+
     </div>
+    
 
     <div id="footer">
       <div id="contacts">
